# hgitmap

./: .gitignore  API.md  AUTHENTICATION.md  GITEA_SETUP.md  GITHUB_SETUP.md  GITLAB_SETUP.md  README.md  generate_heatmap.py
backend/: .env.example  .gitignore  Cargo.toml
backend/db_schema/: 001_oauth_apps.sql  add_oauth_state.sql  schema.sql
backend/src/: main.rs
backend/src/handlers/: activities.rs  auth.rs  contributions.rs  fonts.rs  heatmap_generation.rs  heatmap_themes.rs  mod.rs  oauth.rs  oauth_apps.rs  platform_accounts.rs  platform_sync_jobs.rs  settings.rs  static_files.rs  sync.rs
backend/src/middleware/: auth.rs
backend/src/models/: activity.rs  api_token.rs  contribution.rs  generated_heatmap.rs  git_platform_account.rs  heatmap_generation_job.rs  heatmap_generation_setting.rs  heatmap_theme.rs  mod.rs  oauth_application.rs  oauth_state.rs  platform_sync_job.rs  user.rs  user_setting.rs
backend/src/services/: activity_aggregation.rs  heatmap_generator.rs  job_processor.rs  mod.rs  platform_sync.rs  sync_job_processor.rs  sync_scheduler.rs
backend/src/services/git_platforms/: gitea.rs  github.rs  gitlab.rs  mod.rs
backend/src/utils/: auth.rs  config.rs  encryption.rs  http_client.rs  mod.rs  validators.rs
configs/: hgitmap.service  nginx.conf
docs/: AUTHENTICATION_COMPARISON.md  FINDING_GITEA_TOKEN_INPUT.md  GITEA_TOKEN_PERMISSIONS.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ActivityIcons.jsx  ActivityTimeline.css  ActivityTimeline.jsx  ApiClientSetup.jsx  ColorSchemePicker.css  ColorSchemePicker.jsx  Footer.css  Footer.jsx  Heatmap.css  Heatmap.jsx  HeatmapLogo.jsx  HeatmapPreview.css  HeatmapPreview.jsx  OAuthAppsManager.css  OAuthAppsManager.jsx  PlatformConnector.css  PlatformConnector.jsx  PlatformIcon.jsx  ProtectedRoute.jsx  SettingsLayout.css  SettingsLayout.jsx  SyncJobStatus.css  SyncJobStatus.jsx  SyncJobsViewer.css  SyncJobsViewer.jsx  ThemeToggle.css  ThemeToggle.jsx  Toast.css  Toast.jsx  UserProfile.css  UserProfile.jsx  UserSettings.css  UserSettings.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx  ToastContext.jsx
frontend/src/pages/: AdminOAuthApps.css  AdminOAuthApps.jsx  Auth.css  GenerationSettings.css  (+20 more)
(+1 files in other folders)
